--- a/DD_MapsEditor/DD_MapsEditor.html
+++ b/DD_MapsEditor/DD_MapsEditor.html
@@ -12,14 +12,14 @@
     <body>
  
         <h1 class = "w"> <img src="image/DD_Map/monsters/mons_1.png" alt = "g"> DD_MapsEditor (в разработке) <img src="image/DD_Map/monsters/mons_1.png" alt = "g"></h1>
-        <h4 class = "w"> Последнее изменение <time datetime = "2022-08-12">12.08.22</time> </h4>
+        <h4 class = "w"> Последнее изменение <time datetime = "2022-08-13">13.08.22</time> </h4>
 
         <a href="http://alphagameset.xyz/" class = "st7" title="Главный сайт со всеми работами "> На главную </a>
 
         Рердактор карт для игры 
         <abbr title="Игра находится на очень ранней стадии разработки и что получится и получится ли непонятно">Темное Подземелье</abbr>.
 
-        <a href="https://github.com/LongWayA/DD_DarkDungeon.git"> DD_MapsEditor_m add to github.com </a>
+        <a href="https://github.com/LongWayA/DD_DarkDungeon.git"> DD_MapsEditor add to github.com </a>
 
         <script>
             //false true;
@@ -112,7 +112,8 @@
         <script src = 'DD_Scripts_js/DD_EditorFrameDraw.js'>      </script> <!-- 11 -->        
         <script src = 'DD_Scripts_js/DD_UserInputMouse.js'>       </script> <!-- 11 -->
         <script src = 'DD_Scripts_js/DD_UserInputKey.js'>         </script> <!-- 12 -->
-        <script src = 'DD_Scripts_js/DD_MapsEditor.js'>           </script> <!-- 13 -->
+        <script src = 'DD_Scripts_js/DD_Test.js'>                 </script> <!-- 13 -->
+        <script src = 'DD_Scripts_js/DD_MapsEditor.js'>           </script> <!-- 14 -->
         
         
     </body>
