--- a/2_DD_Game_TS/DD_Game.html
+++ b/2_DD_Game_TS/DD_Game.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title> DarkDungeonGame </title>
-        <!-- Copyright (c) 2022, Brenkman Andrey and/or its affiliates. All rights reserved. -->
-        <!-- Last modified -31.07.2022-07.08.22- -->
+        <!-- Copyright (c) 2023, Brenkman Andrey and/or its affiliates. All rights reserved. -->
+        <!-- Last modified -31.07.2022-07.08.22-18.03.2023 -->
         <link rel='stylesheet' href='DD_Game.css'/>
-        <link  rel = "icon"  type = "image/x-icon" href = "http://alphagameset.xyz/favicon.ico" >
+        <link  rel = "icon"  type = "image/x-icon" href = "/favicon.ico" >
     </head>    
     
     <body>
@@ -14,7 +14,7 @@
         <h1 class = "w" > <img src="DDG_images/monsters/mons_1.png" alt = "g"> Dark Dungeon Game (в разработке)  <img src="DDG_images/monsters/mons_1.png" alt = "g"></h1>
         <!-- дата в виде  The dateTime is specified in the following form "YYYY-MM-DDThh:mm:ss" 
         where: YYYY indicates the year. MM indicates the month. DD indicates the day.-->    
-        <h4 class = "w"> Последнее изменение <time datetime = "2023-03-05">05.03.23</time>  </h4>
+        <h4 class = "w"> Последнее изменение <time datetime = "2023-03-18">18.03m.23</time>  </h4>
 
         <script>
             // здесь будет JavaScript
